feat: add html files and update TaskController
- added no-parameter constructor to TaskSaveDto
- updated GET '/' in TaskController
- added GET '/add' in TaskController that returns add.html
- added POST '/add' in TaskController that claims TaskSaveDto and saves it
- added add.html with basic form to add Task
- updated index.html so it shows saved tasks

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
     <h1>Witaj w aplikacji Habit Tracker!</h1>
+
+    <div th:unless="${tasks.isEmpty()}">
+        <div th:each="task,pointer: ${tasks}" th:object="${task}">
+            <p th:text="|(${pointer.count}) Nazwa: *{name} Opis: *{description}|"/>
+        </div>
+    </div>
+
+    <div th:if="${tasks.isEmpty()}">
+        <h1>Nie dodales jeszcze zadnego zadania!</h1>
+    </div>
+
+    <a href="#" th:href="@{/add}">Dodaj zadanie</a>
 </body>
 </html>
